# nhp_products

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  SAMPLE.env  benchmark.py  pyproject.toml
.github/workflows/: test.yml
nhpy/: add_and_suppress_baseline.py  az.py  az_pl.py  check_full_results.py  config.py  custom_baseline_standard.py  pipeline.py  process_data.py  process_data_pl.py  process_params.py  process_results.py  process_results_pl.py  py.typed  run_detailed_results.py  run_detailed_results_pl.py  run_full_results.py  types.py  utils.py
nhpy/qa/: model_runs.py
notebooks/PRODUCT_detailed_activity-avoided/: databricks_national_activity_avoided.py  databricks_national_activity_avoided_with_baseline.ipynb  detailed_activity-avoided.ipynb  national_activity_avoided.py
notebooks/PRODUCT_detailed_results/: detailed_results_v4-1.py  detailed_results_v4.ipynb  detailed_results_v4.py
notebooks/PRODUCT_time-profiles/: produce_time_profiles.ipynb
notebooks/QA_PBM/: QA_PBM.ipynb
notebooks/QA_detailed-baseline/: detailed_baseline_and_mitigators.ipynb
notebooks/QA_prerelease-data-checks/: QA_data_checks.ipynb  README.md
notebooks/QA_run-2-previous-scenarios-on-dev/: SAMPLE.env  qa_model_runs.ipynb
tests/: test_benchmark.py  test_check_full_results.py  test_pipeline.py  test_run_detailed_results.py  test_run_detailed_results_pl.py  test_run_full_results.py
